--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Dmytro Zl",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "flatpickr": "^4.6.13",
     "gh-pages": "^6.1.1",
     "izitoast": "^1.4.0",
